Stub actions in the item drop-down menus

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,6 +229,10 @@ div.actionsdropdown {
   float:right;
 }
 
+div.actionsgpopover {
+  font-size: 1.3em;
+}
+
 div#errorbox {
   position: fixed;
   top: 1em;
