--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,6 +267,16 @@ div.item-actions ul.actionlist li a.actionbutton {
   text-decoration: none;
 }
 
+.threadloading {
+    height: 30px;
+    width: 100%;
+    background: rgba( 235, 235, 235, .8 )
+                url('../img/loading.gif')
+                50% 50%
+                no-repeat;
+    text-align: center;
+}
+
 div.threaditem-fromuser {
   padding: 0.5em 0.5em 0 0.5em;
   overflow: hidden;
