--- a/public/css/style.css
+++ b/public/css/style.css
@@ -370,7 +370,7 @@ div#successbox {
     left: 0;
     height: 100%;
     width: 100%;
-    background: rgba( 235, 235, 235, .8 )
+    background: rgba( 235, 235, 235, 1 )
                 url('../img/loading.gif')
                 50% 50%
                 no-repeat;
