--- a/public/css/jquery.gpopover.css
+++ b/public/css/jquery.gpopover.css
@@ -10,16 +10,7 @@
  */
 
 .gpopover {
-    background: #5b5b5b;
-    background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
-    background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
-    background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
-    background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
-    background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
-    border: 1px solid black;
-    border-color: rgba(0, 0, 0, 0.2);
+    background: #8888ff;
     border-radius: 2px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     display: none;
@@ -31,7 +22,7 @@
 
 .gpopover .gpopover-arrow {
     border: 8px solid transparent;
-    border-bottom-color: #5b5b5b;
+    border-bottom-color: #8888ff;
     border-top-width: 0;
     height: 0;
     position: absolute;
