--- a/public/css/themes/inverted.css
+++ b/public/css/themes/inverted.css
@@ -18,6 +18,7 @@ div#topmenu a {
 
 textarea#postentry {
   background-color: black;
+  color: white;
   border: 2px solid #4040a0;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -119,6 +120,7 @@ div.threaditem-text a {
 
 textarea.replyentry {
   background-color: black;
+  color: white;
   border: 2px solid #4040a0;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
