--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,13 +19,14 @@ div#header h2 {
 div#topmenu {
   float:right;
   display:inline-block;
-  margin: 1em;
+  margin-top: 1.1em;
   padding: 0;
   line-height: 2em;
 }
 
 div#topmenu a {
-  margin: 0.5em 1.1em;
+  margin: 0.5em 1em 0 0;
+  padding: 0.5em 1em;
 }
 
 textarea#postentry {
