--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -74,6 +74,11 @@ div.item {
   font-weight: 100;
 }
 
+div.item a {
+  color: #4096ee;
+  text-decoration: none;
+}
+
 div.item-new {
   border: 2px solid #6666ff;
 }
