--- a/public/css/themes/inverted.css
+++ b/public/css/themes/inverted.css
@@ -75,6 +75,11 @@ div.item {
   font-weight: 100;
 }
 
+div.item a {
+  color: #4040a0;
+  text-decoration: none;
+}
+
 div.item-new {
   border: 2px solid #4040a0;
 }
