Added client-side support for the Delete All Data call

--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -107,6 +107,10 @@ div.item-actions {
   color: #333333;
 }
 
+div.item form {
+  color: #333333;
+}
+
 .threadloading {
     background: rgba( 235, 235, 235, .8 )
                 url('../../img/loading.gif')
