--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -8,7 +8,7 @@ div#header {
 }
 
 div#header h2 {
-  color: #6666ff;
+  color: #4096ee;
 }
 
 div#topmenu a {
@@ -107,11 +107,16 @@ div.item-actions {
   color: #333333;
 }
 
+div.item-actions ul.actionlist li a.actionbutton:hover {
+  color: #4096ee;
+}
+
 div.item form {
   color: #333333;
 }
 
 div.draggablebox {
+  background-color: #eeeeee;
   border: 1px solid gray;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -150,6 +155,32 @@ span.replybutton {
   -moz-border-radius: 2px;
   border-radius: 2px;
   color: white;
+}
+
+.button {
+	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) ) !important;
+	background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5') !important;
+	background-color:#79bbff !important;
+	border:1px solid #84bbf3;
+	color:#ffffff !important;
+	text-shadow:1px 1px 0px #528ecc;
+}
+
+.deletebutton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	box-shadow:inset 0px 1px 0px 0px #f5978e;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f) ) !important;
+	background:-moz-linear-gradient( center top, #f24537 5%, #c62d1f 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f') !important;
+	background-color:#f24537 !important;
+	border:1px solid #d02718;
+	color:#ffffff !important;
+	text-shadow:1px 1px 0px #810e05;
 }
 
 div#errorbox {
