--- a/public/css/themes/inverted.css
+++ b/public/css/themes/inverted.css
@@ -108,11 +108,16 @@ div.item-actions {
   color: #a0a0a0;
 }
 
+div.item-actions ul.actionlist li a.actionbutton:hover {
+  color: #d0d0d0;
+}
+
 div.item form {
   color: #a0a0a0;
 }
 
 div.draggablebox {
+  background-color: #404040;
   border: 1px solid gray;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -152,6 +157,32 @@ span.replybutton {
   -moz-border-radius: 2px;
   border-radius: 2px;
   color: white;
+}
+
+.button {
+	-moz-box-shadow:inset 0px 1px 0px 0px #202020;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #202020;
+	box-shadow:inset 0px 1px 0px 0px #202020;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #404040), color-stop(1, #202020) ) !important;
+	background:-moz-linear-gradient( center top, #404040 5%, #202020 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#404040', endColorstr='#202020') !important;
+	background-color:#202020 !important;
+	border:1px solid #101010;
+	color:#ffffff !important;
+	text-shadow:1px 1px 0px #303030;
+}
+
+.deletebutton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	box-shadow:inset 0px 1px 0px 0px #f5978e;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f) ) !important;
+	background:-moz-linear-gradient( center top, #f24537 5%, #c62d1f 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f') !important;
+	background-color:#f24537 !important;
+	border:1px solid #d02718;
+	color:#ffffff !important;
+	text-shadow:1px 1px 0px #810e05;
 }
 
 div#errorbox {
