Minimal theme tweak

--- a/public/css/themes/minimal.css
+++ b/public/css/themes/minimal.css
@@ -56,7 +56,7 @@ span.charcount {
 }
 
 div.columnloading {
-  background: #eeeeee
+  background: #ffffff
                 url('../../img/loading-small.gif')
                 100% 100%
                 no-repeat;
