--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -162,6 +162,11 @@ span.replybutton {
   color: white;
 }
 
+span.replycharcount {
+  color: gray;
+  font-weight: bold;
+}
+
 .button {
 	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
