--- a/public/css/themes/minimal.css
+++ b/public/css/themes/minimal.css
@@ -129,6 +129,11 @@ textarea.replyentry {
   background-color: white;
 }
 
+span.replycharcount {
+  color: gray;
+  font-weight: bold;
+}
+
 .button {
 	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
